# solidboolean

./: LICENSE  README.md
src/: axisalignedboundingbox.cpp  axisalignedboundingbox.h  axisalignedboundingboxtree.cpp  axisalignedboundingboxtree.h  double.h  positionkey.cpp  positionkey.h  retriangulator.cpp  retriangulator.h  solidboolean.cpp  solidboolean.h  solidmesh.cpp  solidmesh.h  vector2.h  vector3.h
test/: CMakeLists.txt  main.cpp
test/cases/addax-and-meerkat/: addax.ds3  meerkat.ds3
test/cases/complex/: complex.ds3
test/cases/cube-sphere/: cube-sphere.ds3
test/cases/screwdriver/: screwdriver.ds3
test/cases/simple-ring/: simple-ring.ds3
